<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mygram</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="go">GO</string>
    <string name="from">from</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="compose_hint">Text reply</string>
    <string name="image_reply">IMAGE</string>
    <string name="pictogram_reply">=)</string>
    <string name="file_reply">FILE</string>
    <string name="text_reply">TEXT</string>

</resources>
